--- a/app/Resources/views/site/_partials/_header.html.twig
+++ b/app/Resources/views/site/_partials/_header.html.twig
@@ -5,22 +5,22 @@
                 <div class="container">
 
                     <!-- Logo -->
-                    <div class="logo"><a href="index.html" id="logo"></a></div>
+                    <div class="logo"><a href="{{ path('site_homepage') }}" id="logo"></a></div>
 
                     <div class="right_links">
 
                         <ul>
-                            <li class="link"><a class="fancybox fancybox.ajax" href="login-frame.html"><i
-                                            class="fa fa-envelope"></i> info@yourwebsite.com</a></li>
-                            <li class="link"><a class="fancybox fancybox.ajax" href="register-frame.html"><i
-                                            class="fa fa-edit"></i> Register</a></li>
+                            <li class="link">
+                                <a class="" href="#">
+                                    <i class="fa fa-envelope"></i> adm@rcinformatica.net.br
+                                </a>
+                            </li>
+                            <li class="link">
+                                <a class="" href="">
+                                    <i class="fa fa-user"></i> Acesso do Cliente
+                                </a>
+                            </li>
                             <li class="social"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li class="social"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li class="social"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                            <li class="social"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                            <li class="social"><a href="#"><i class="fa fa-flickr"></i></a></li>
-                            <li class="social"><a href="#"><i class="fa fa-youtube"></i></a></li>
-                            <li class="social"><a href="#"><i class="fa fa-rss"></i></a></li>
                         </ul>
 
                     </div><!-- end right links -->
@@ -85,12 +85,12 @@
 
                                 </ul>
 
-                                <div id="wrap">
+                                {#<div id="wrap">
                                     <form action="index.html" autocomplete="on">
                                         <input id="search" name="search" type="text" placeholder=""><input
                                                 id="search_submit" value="search" type="submit">
                                     </form>
-                                </div>
+                                </div>#}
 
                             </div>
                         </div>
