--- a/web/site/assets/css/_reset.css
+++ b/web/site/assets/css/_reset.css
@@ -40,7 +40,7 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Roboto', sans-serif;
 	font-weight: normal;
 	color: #272727;
 }
@@ -70,6 +70,13 @@ h1 b {
 h1.white {
 	color: #fff;
 }
+h1.whitecaps {
+	color: #fff;
+	text-transform: uppercase;
+}
+h1.whitecaps strong {
+	font-weight: 500;
+}
 h2 { 
 	font-size: 35px; 
 	line-height: 35px;
@@ -80,11 +87,19 @@ h2 {
 h2.white {
 	color: #fff;
 }
+h2.whitecaps {
+	color: #fff;
+	text-decoration: underline;
+	text-transform: uppercase;
+	padding-bottom: 20px;
+	text-decoration-color: #999;
+	-moz-text-decoration-color: #999; /* Code for Firefox */
+}
 h2.white b {
 	color: #999;
 }
 h2 i {
-	color: #13afeb;
+	color: #7ab700;
 	font-style: normal;
 }
 h2 b {
@@ -97,12 +112,20 @@ h2 b {
 }
 h2.caps {
 	text-transform: uppercase;
+	padding-bottom: 12px;
 }
 h2.caps b {
 	text-transform: none;
 }
 h2.caps strong {
 	font-weight: 500;
+}
+h2.untext { 
+	text-decoration: underline;
+	text-transform: uppercase;
+	padding-bottom: 20px;
+	text-decoration-color: #e3e3e3;
+	-moz-text-decoration-color: #e3e3e3; /* Code for Firefox */
 }
 h3 { 
 	font-size: 27px; 
@@ -112,6 +135,10 @@ h3 {
 }
 h3 strong {
 	font-weight: 600;
+}
+h3.colored {
+	color: #7ab700;
+	font-weight: 300;
 }
 h4 { 
 	font-size: 22px; 
@@ -131,6 +158,10 @@ h4 b {
 	display: block;
 	font-weight: normal;
 }
+h4 i {
+	font-weight: 300;
+	font-style: normal;
+}
 h5 { 
 	font-size: 18px; 
 	line-height: 23px;
@@ -143,6 +174,12 @@ h5 b {
 	font-weight: normal;
 	display: block;
 }
+h5 i {
+	color: #727272;
+	font-size: 14px;
+	font-weight: normal;
+	font-style: normal;
+}
 h5.caps {
 	text-transform: uppercase;
 }
@@ -150,11 +187,11 @@ h5.grayc {
 	color: #999;
 }
 h5.siteccaps {
-	color: #13afeb;
+	color: #7ab700;
 	text-transform: uppercase;
 }
 h5.sitec {
-	color: #13afeb;
+	color: #7ab700;
 }
 h5.white {
 	color: #fff;
@@ -212,7 +249,7 @@ cite, em, i {
 blockquote {
 	margin: 20px 0 20px 36px;
 	font-size: 16px;
-	border-left: 5px solid #13afeb;
+	border-left: 5px solid #7ab700;
 	padding: 5px 20px 5px 20px;
 	font-family: 'Open Sans' !important;
 	font-weight: normal;
@@ -271,7 +308,7 @@ sub {
 
 /* Links */
 a {
-	color: #13afeb;
+	color: #7ab700;
 	text-decoration: none;
 }
 a:hover {
@@ -285,7 +322,7 @@ a.ltwo {
 }
 a.ltwo:hover {
 	text-decoration: none;
-	color: #13afeb;
+	color: #7ab700;
 }
 
 a.lthree {
@@ -294,25 +331,7 @@ a.lthree {
 }
 a.lthree:hover {
 	text-decoration: none;
-	color: #13afeb;
-}
-
-a.lfour {
-	color: #13afeb;
-	text-decoration: none;
-}
-a.lfour:hover {
-	text-decoration: none;
-	color: #fff;
-}
-
-a.lfive {
-	color: #13afeb;
-	text-decoration: none;
-}
-a.lfive:hover {
-	text-decoration: none;
-	color: #454545;
+	color: #7ab700;
 }
 
 
@@ -360,6 +379,7 @@ height: 0;
 	display:block;
 }
 
+
 /* less width */
 .less1 {
 	width: 75%;
@@ -374,6 +394,7 @@ height: 0;
 .white {
 	color: #fff;
 }
+
 
 /* margin bitween sections */
 .margin_top1 {
@@ -583,12 +604,6 @@ height: 0;
 	width: 100%;
 	margin: 40px 0px 48px 0px;
 	border-top: 1px dotted #d7d7d7;
-}
-.divider_dashed10 {
-	float: left;
-	width: 100%;
-	margin: 0px 0px 35px 0px;
-	border-top: 1px dashed #3b3b3b;
 }
 
 /* responsive image */
