--- a/web/site/assets/css/style.css
+++ b/web/site/assets/css/style.css
@@ -227,6 +227,7 @@
 	width: 100%;
 	text-align: center;
 	padding: 63px 0px;
+	background: url(../images/texture-1.png) repeat left top;
 }
 
 .arrow_box {
@@ -1878,7 +1879,8 @@ ul.fun_facts {
 	width: 100%;
 	text-align: center;
 	padding: 80px 0px 80px 0px;
-	background: #eee url("../images/parallax-bg9.jpg");
+	/*background: #eee url("../images/parallax-bg9.jpg");*/
+	background: #eee url("../images/parallax-bg10.jpg");
 	background-attachment: fixed;
 	background-origin: initial;
 	background-clip: initial;
