--- a/app/Resources/views/site/_partials/_banner.html.twig
+++ b/app/Resources/views/site/_partials/_banner.html.twig
@@ -28,7 +28,7 @@
                 data-ease="easeOutExpo"
                 data-effect="bottom(40)"
             >
-                <strong>PAF-ECF</strong> - Sistema de Gestão Empresarial para quem não tem tempo a perder
+                <strong>PAF-RC</strong> - Sistema de Gestão Empresarial para quem não tem tempo a perder
             </h4>
 
             <div class="ms-layer"
